add router helper (adminOnly, mustLogin).

--- a/views/functionTest.jade
+++ b/views/functionTest.jade
@@ -14,7 +14,7 @@ block content
     li
       h4
         a(href='/login') /login
-      span redirect to twitte oauth page
+      span redirect to twitter oauth page
     li
       h4
         a(href='/logout') /logout
