--- a/views/item/detail.jade
+++ b/views/item/detail.jade
@@ -2,4 +2,5 @@ extends ../layout
 
 block content
   h1 item page #{item.id} - #{item.fileName}
+  img(src='/raw/#{item.id}')
   a(href='/item') back
