--- a/views/functionTest.jade
+++ b/views/functionTest.jade
@@ -39,7 +39,7 @@ block content
       span show all users page (admin only)
     li
       h4
-        a(href='/user/detail/:USER_ID') /user/detail/:USER_ID
+        a(href='/user/:USER_ID') /user/:USER_ID
       span show user page
 
   h3 item
@@ -50,7 +50,7 @@ block content
       span show item page top
     li
       h4
-        a(href='/item/detail/ITEM_ID') /item/detail/:ITEM_ID
+        a(href='/item/ITEM_ID') /item/:ITEM_ID
       span show item detail
     li
       h4
